Fix header's z-index

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,6 +1,7 @@
 .header {
   margin-top: .5rem;
   position: absolute;
+  z-index: 999;
   width: 100%;
 }
 
